--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-redux": "^7.2.6",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
+		"sass": "^1.43.4",
 		"typescript": "^4.4.4",
 		"web-vitals": "^2.1.2"
 	},
