--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
 		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^16.11.6",
-		"@types/react": "^17.0.33",
-		"@types/react-dom": "^17.0.10",
+		"@types/react": "^17.0.34",
+		"@types/react-dom": "^17.0.11",
 		"@types/react-redux": "^7.1.20",
 		"axios": "^0.24.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
 		"react-query": "^3.31.0",
 		"react-redux": "^7.2.6",
-		"react-router-dom": "^5.3.0",
+		"react-router-dom": "^6.0.0",
 		"react-scripts": "4.0.3",
 		"sass": "^1.43.4",
 		"typescript": "^4.4.4",
