--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
 		"@emotion/styled": "^11.3.0",
 		"@mui/material": "^5.0.6",
 		"@reduxjs/toolkit": "^1.6.2",
-		"@testing-library/jest-dom": "^5.15.0",
-		"@testing-library/react": "^12.1.2",
-		"@testing-library/user-event": "^13.5.0",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^16.11.6",
 		"@types/react": "^17.0.34",
@@ -24,8 +21,7 @@
 		"react-router-dom": "^6.0.0",
 		"react-scripts": "4.0.3",
 		"sass": "^1.43.4",
-		"typescript": "^4.4.4",
-		"web-vitals": "^2.1.2"
+		"typescript": "^4.4.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
