--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
+		"react-location": "^3.2.8",
+		"react-location-devtools": "^3.2.8",
 		"react-query": "^3.31.0",
 		"react-redux": "^7.2.6",
-		"react-router-dom": "^6.0.0",
 		"react-scripts": "4.0.3",
 		"sass": "^1.43.4",
 		"typescript": "^4.4.4"
