--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@types/react-dom": "^17.0.11",
 		"@types/react-redux": "^7.1.20",
 		"axios": "^0.24.0",
+		"framer-motion": "^4.1.17",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
